# OOP-Lab-03

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  figure.h  figure_array.h  main.cpp  pentagon.cpp  pentagon.h  point.h  rhombus.cpp  rhombus.h  trapezoid.cpp  trapezoid.h
test/: CMakeLists.txt  test_figures.cpp
